pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingObjectDelimiter.pkl
foo = new {
  x = 1
